# trubo

./: .gitignore  ARCHITECTURE.md  CONTRIBUTORS  Cargo.toml  LICENSE  README.md  TODO.md  re
.github/workflows/: ci.yml  release.yml
doc/: ARCHITECTURE.md  GUIDE.md
shebang-demos/: ocaml_demo
src/: app.rs  clipboard.rs  editor.rs  file_types.rs  main.rs  project.rs  ui.rs
test-files/: Optionally.scala  bash_comments_demo  bash_demo  compile.sh  lean_comments_demo  python_comments_demo  python_demo  typescript_comments_demo  typescript_demo
