[package]
name = "trubo"
version = "0.1.5"
edition = "2024"
description = "A Text-Based Editor, Browser, and File Manager"
repository = "https://github.com/vkuncak/trubo"
readme = "README.md"
rust-version = "1.95"
license = "MIT"

[dependencies]
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "tiff", "webp"] }
regex = "1"
ratatui = "0.30"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
